# sales-agent

sales-agent-backend/: .gitignore  env.sample  pyproject.toml
sales-agent-backend/src/: config.py  console.py  logger.py
sales-agent-backend/src/genai/sales_agent/: agent.py
sales-agent-backend/src/genai/sales_agent/nodes/: do_nothing.py  flow_controller.py  reset_topic.py  router.py
sales-agent-backend/src/genai/sales_agent/nodes/subgraph/: greeting_nodes.py  off_topic_nodes.py
sales-agent-backend/src/genai/sales_agent/schemas/: topic.py
sales-agent-backend/src/genai/sales_agent/states/: sales_agent_state.py
sales-agent-backend/src/genai/sales_agent/subgraphs/: greeting_subgraph.py  off_topic_subgraph.py
sales-agent-backend/src/genai/sales_agent/utils/: const_prompts.py  helpers.py
